ostad-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-server
  namespace: siraj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostad-server
  template:
    metadata:
      labels:
        app: ostad-server
    spec:
      containers:
        - name: ostad-server
          image: ostad-server:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
