mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: siraj
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
  type: NodePort
