ostad-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui
  namespace: siraj
spec:
  selector:
    app: ostad-ui
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30001
  type: NodePort
