ostad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ostad-ingress
  namespace: siraj
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ostad-ui
                port:
                  number: 5173

    - host: mongo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
